--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/repl": "^3.1.0",
+    "json2csv": "6.0.0-alpha.2",
     "proxy-addr": "^2.0.7",
+    "puppeteer": "^23.6.1",
     "reflect-metadata": "^0.2.2",
     "source-map-support": "^0.5.21"
   }
