--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
     "@adonisjs/assembler": "5.9.6",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "2.5.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/proxy-addr": "^2.0.3",
     "@types/source-map-support": "^0.5.10",
     "adonis-preset-ts": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pino-pretty": "^11.3.0",
     "typescript": "~4.6",
     "youch": "^3.3.4",
